--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   shimmer: ^3.0.0
   transparent_image: ^2.0.1
   intl: ^0.20.2
+  provider: ^6.0.5
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
