--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.0.5
   shared_preferences: ^2.2.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
