--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.3
   google_fonts: ^6.1.0
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
