--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   shared_preferences: ^2.2.3
   google_fonts: ^6.1.0
   share_plus: ^10.1.2
+  dio: ^5.4.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
