--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   share_plus: ^10.1.2
   dio: ^5.4.0
   flutter_secure_storage: ^9.0.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
