--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,19 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.3
   google_fonts: ^6.1.0
-  share_plus: ^10.1.2
+  share_plus: ^12.0.1
   dio: ^5.4.0
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^10.0.0
   image_picker: ^1.0.7
+  timeago: ^3.7.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  build_runner: ^2.10.4
+  json_serializable: ^6.11.3
 
 flutter:
   uses-material-design: true
